Some more commands added

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -51,12 +51,16 @@ DoubleClickTime=0.200000
 bCaptureMouseOnLaunch=True
 DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 bDefaultViewportMouseLock=True
+-ActionMappings=(ActionName="MeleeAttack",Key=Gamepad_RightTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="NewActionMapping_1",Key=Gamepad_LeftTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="MeleeAttack",Key=Gamepad_RightTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="RangedAttack",Key=Gamepad_LeftTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -AxisMappings=(AxisName="MovementLeftRight",Key=A,Scale=-1.000000)
 -AxisMappings=(AxisName="MovementUpDown",Key=W,Scale=1.000000)
 -AxisMappings=(AxisName="MovementLeftRight",Key=D,Scale=1.000000)
 -AxisMappings=(AxisName="MovementUpDown",Key=S,Scale=-1.000000)
 -AxisMappings=(AxisName="MovementLeftRight",Key=Gamepad_LeftX,Scale=1.000000)
--AxisMappings=(AxisName="MovementUpDown",Key=None,Scale=1.000000)
+-AxisMappings=(AxisName="MovementUpDown",Key=Gamepad_LeftY,Scale=1.000000)
 +AxisMappings=(AxisName="MovementLeftRight",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="MovementUpDown",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MovementLeftRight",Key=D,Scale=1.000000)
