--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -1,5 +1,11 @@
 
 [/Script/Engine.InputSettings]
+-AxisConfig=(AxisKeyName="Gamepad_LeftX",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
+-AxisConfig=(AxisKeyName="Gamepad_LeftY",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
+-AxisConfig=(AxisKeyName="Gamepad_RightX",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
+-AxisConfig=(AxisKeyName="Gamepad_RightY",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
+-AxisConfig=(AxisKeyName="MouseX",AxisProperties=(DeadZone=0.f,Exponent=1.f,Sensitivity=0.07f))
+-AxisConfig=(AxisKeyName="MouseY",AxisProperties=(DeadZone=0.f,Exponent=1.f,Sensitivity=0.07f))
 -AxisConfig=(AxisKeyName="MotionController_Left_Thumbstick_X",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
 -AxisConfig=(AxisKeyName="MotionController_Left_Thumbstick_Y",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
 -AxisConfig=(AxisKeyName="MotionController_Left_TriggerAxis",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
@@ -51,28 +57,26 @@ DoubleClickTime=0.200000
 bCaptureMouseOnLaunch=True
 DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 bDefaultViewportMouseLock=True
--ActionMappings=(ActionName="MeleeAttack",Key=Gamepad_RightTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--ActionMappings=(ActionName="RangedAttack",Key=Gamepad_RightShoulder,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--ActionMappings=(ActionName="Kick",Key=Comma,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--ActionMappings=(ActionName="Kick",Key=Gamepad_LeftTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--ActionMappings=(ActionName="MeleeAttack",Key=None,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="MeleeAttack",Key=Gamepad_RightTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="RangedAttack",Key=Gamepad_RightShoulder,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="Kick",Key=Comma,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="Kick",Key=Gamepad_LeftTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="MeleeAttack",Key=Period,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -AxisMappings=(AxisName="MovementLeftRight",Key=A,Scale=-1.000000)
 -AxisMappings=(AxisName="MovementUpDown",Key=W,Scale=1.000000)
 -AxisMappings=(AxisName="MovementLeftRight",Key=D,Scale=1.000000)
 -AxisMappings=(AxisName="MovementUpDown",Key=S,Scale=-1.000000)
 -AxisMappings=(AxisName="MovementLeftRight",Key=Gamepad_LeftX,Scale=1.000000)
 -AxisMappings=(AxisName="MovementUpDown",Key=Gamepad_LeftY,Scale=1.000000)
+-AxisMappings=(AxisName="Punch",Key=Gamepad_RightTrigger,Scale=1.000000)
+-AxisMappings=(AxisName="Punch",Key=Period,Scale=1.000000)
+-AxisMappings=(AxisName="Kick",Key=Gamepad_LeftTrigger,Scale=1.000000)
+-AxisMappings=(AxisName="Kick",Key=None,Scale=1.000000)
 +AxisMappings=(AxisName="MovementLeftRight",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="MovementUpDown",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MovementLeftRight",Key=D,Scale=1.000000)
 +AxisMappings=(AxisName="MovementUpDown",Key=S,Scale=-1.000000)
 +AxisMappings=(AxisName="MovementLeftRight",Key=Gamepad_LeftX,Scale=1.000000)
 +AxisMappings=(AxisName="MovementUpDown",Key=Gamepad_LeftY,Scale=1.000000)
++AxisMappings=(AxisName="Punch",Key=Gamepad_RightTrigger,Scale=1.000000)
++AxisMappings=(AxisName="Punch",Key=Period,Scale=1.000000)
++AxisMappings=(AxisName="Kick",Key=Gamepad_LeftTrigger,Scale=1.000000)
++AxisMappings=(AxisName="Kick",Key=Comma,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
