Missile functionality finished

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -1,11 +1,5 @@
 
 [/Script/Engine.InputSettings]
--AxisConfig=(AxisKeyName="Gamepad_LeftX",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
--AxisConfig=(AxisKeyName="Gamepad_LeftY",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
--AxisConfig=(AxisKeyName="Gamepad_RightX",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
--AxisConfig=(AxisKeyName="Gamepad_RightY",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
--AxisConfig=(AxisKeyName="MouseX",AxisProperties=(DeadZone=0.f,Exponent=1.f,Sensitivity=0.07f))
--AxisConfig=(AxisKeyName="MouseY",AxisProperties=(DeadZone=0.f,Exponent=1.f,Sensitivity=0.07f))
 -AxisConfig=(AxisKeyName="MotionController_Left_Thumbstick_X",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
 -AxisConfig=(AxisKeyName="MotionController_Left_Thumbstick_Y",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
 -AxisConfig=(AxisKeyName="MotionController_Left_TriggerAxis",AxisProperties=(DeadZone=0.000000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
@@ -66,7 +60,9 @@ bDefaultViewportMouseLock=True
 -AxisMappings=(AxisName="Punch",Key=Gamepad_RightTrigger,Scale=1.000000)
 -AxisMappings=(AxisName="Punch",Key=Period,Scale=1.000000)
 -AxisMappings=(AxisName="Kick",Key=Gamepad_LeftTrigger,Scale=1.000000)
--AxisMappings=(AxisName="Kick",Key=None,Scale=1.000000)
+-AxisMappings=(AxisName="Kick",Key=Comma,Scale=1.000000)
+-AxisMappings=(AxisName="LaunchMissile",Key=Gamepad_RightShoulder,Scale=1.000000)
+-AxisMappings=(AxisName="LaunchMissile",Key=None,Scale=1.000000)
 +AxisMappings=(AxisName="MovementLeftRight",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="MovementUpDown",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MovementLeftRight",Key=D,Scale=1.000000)
@@ -77,6 +73,8 @@ bDefaultViewportMouseLock=True
 +AxisMappings=(AxisName="Punch",Key=Period,Scale=1.000000)
 +AxisMappings=(AxisName="Kick",Key=Gamepad_LeftTrigger,Scale=1.000000)
 +AxisMappings=(AxisName="Kick",Key=Comma,Scale=1.000000)
++AxisMappings=(AxisName="LaunchMissile",Key=Gamepad_RightShoulder,Scale=1.000000)
++AxisMappings=(AxisName="LaunchMissile",Key=Slash,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
