Uh oh navigation issue!

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,3 +10,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 EditorStartupMap=/Game/Maps/Default.Default
 GameDefaultMap=/Game/Maps/Default.Default
 
+[/Script/Engine.RecastNavMesh]
+RuntimeGeneration=Dynamic
+
