Pathing bug fixed with BB workaround

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -14,3 +14,6 @@ GameDefaultMap=/Game/Maps/Default.Default
 RuntimeGeneration=Dynamic
 AgentHeight=80.000000
 
+[/Script/Engine.NavigationSystem]
+bInitialBuildingLocked=True
+
