Initial build tests

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,2 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=659223444859C80C2CAB1F8F905F47C1
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+IncludeCrashReporter=False
+
