Attempt at HTML5 port

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,5 +2,28 @@
 ProjectID=659223444859C80C2CAB1F8F905F47C1
 
 [/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+StagingDirectory=(Path="F:/tmp/ld36")
+FullRebuild=False
+ForDistribution=False
+IncludeDebugFiles=False
+bNativizeBlueprintAssets=True
+UsePakFile=True
+bGenerateChunks=False
+bChunkHardReferencesOnly=False
+bBuildHttpChunkInstallData=False
+HttpChunkInstallDataDirectory=(Path=)
+HttpChunkInstallDataVersion=
+IncludePrerequisites=True
 IncludeCrashReporter=False
+InternationalizationPreset=English
+-CulturesToStage=en
++CulturesToStage=en
+DefaultCulture=en
+bCookAll=False
+bCookMapsOnly=False
+bCompressed=False
+bSkipEditorContent=False
+-DirectoriesToAlwaysCook=(Path=)
++DirectoriesToAlwaysCook=(Path="Sounds/Dialog/cleaned")
 
