Nativization turned off

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -17,3 +17,6 @@ AgentHeight=80.000000
 [/Script/Engine.NavigationSystem]
 bInitialBuildingLocked=True
 
+[/Script/Engine.EndUserSettings]
+bSendAnonymousUsageDataToEpic=False
+
